Update fixed.css
changed padding for navbaritem so it removes horizontal scrolling due to navbar being wider than screen

--- a/fixed.css
+++ b/fixed.css
@@ -342,4 +342,8 @@ sup {
     sup {
         font-size: .75rem;
     }
+
+    .navbar__item {
+        padding: 0 .5rem;
+    }
 }
